--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: 'Vazirmatn', sans-serif;
+    font-family: 'sahel', sans-serif;
     direction: rtl;
     background-color: var(--bg-color);
     color: var(--text-color);
