--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ text-align: right;
 .hero__name {
     font-size: 2.8rem;
     font-weight: 700;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     color: #ffffff;
 }
 
@@ -122,8 +122,8 @@ text-align: right;
 }
 .hero-header-content {
     display: flex; /* برای چیدمان افقی */
-    align-items: center; /* تراز کردن عمودی در مرکز */
-    justify-content: center; /* تراز کردن افقی در مرکز */
+    align-items: right; /* تراز کردن عمودی در مرکز */
+    justify-content: right; /* تراز کردن افقی در مرکز */
     margin-bottom: 20px; /* فاصله کلی این بخش با عنوان شغلی پایین‌تر */
 }
 
